# DUI2

./: IMPROVEMENT_SUGGESTIONS.md  README.md  conda_installer.sh  dui_conda_installer.sh  dui_instaler_w_dials_v3p25.sh  dui_installer_after_conda.sh  dui_intaller_after_conda.sh  install_dials_n_dui2.sh  install_dui2_after_ccp4_w_curl.sh  install_dui2_linux_dev.sh  pyproject.toml  setup.py  win10_conda_installer.bat  windows10_after_conda_install.bat
src/: all_local.py  all_local_all_ram.py  img_client.py  img_server.py  only_client.py  only_server.py  run_dui2.py  run_dui2_all_ram.py  run_dui2_client.py  run_dui2_server.py  run_dui2_two_procs.py  run_img_client.py  run_img_server.py  run_multi_user_dui2_server.py  run_user_login.py
src/client/: client.ui  client_connecting.py  client_connecting_cli.py  client_connecting_gui.py  dui_client.ui  exec_utils.py  file_nav_utils.py  gui_utils.py  img_view.py  img_view.ui  img_view_utils.py  init_firts.py  main_client.py  main_dui.ui  outputs.py  q_object.py  reindex_table.py  run_client.py  simpler_param_widgets.py  test_connect_2_crach.py  test_connect_2_crash.py  test_connect_build_splitable.py  test_connect_cli.py  test_connect_interact.py  test_connect_post.py  tree_draw_tmp.py  tree_test.ui  view_client.ui
src/dui2/: all_local.py  all_local_all_ram.py  img_client.py  img_server.py  only_client.py  only_server.py
src/multi_user/: client_gui.py  http_cors_server.py
src/server/: data_n_json.py  image_browser_server.py  init_first.py  main_server.py  multi_node.py  out_utils.py  params_2_json.py  run_server.py  (+2 more)
(+60 files in other folders)
