[project]
name = "dui2"
version = "2024.02.16"
description = "New multi-tasking version of Dui"
requires-python = ">=3.7"
dependencies = [
  'requests > 2',
  'PySide2 > 5.15.1'
]

[project.gui-scripts]
dui2 = "dui2.all_local:main"

[tool.setuptools.package-data]
"dui2.client" = ["dui_client.ui"]
"dui2.client.resources" = ["*.png"]
