[project]
name = "dui2"
version = "2024.07.03"
description = "New multi-tasking version of Dui"
requires-python = ">=3.7"
dependencies = [
  'requests > 2',
  'h5py >= 3.7.0'
  'PySide2 > 5.15.1'
]

[project.scripts]
dui2_server = "dui2.only_server:main"

[project.gui-scripts]
dui2 = "dui2.all_local:main"
dui2_client = "dui2.only_client:main"


[tool.setuptools.package-data]
"dui2.client" = ["dui_client.ui"]
"dui2.client.resources" = ["*.png"]
